<resources>
    <string name="app_name">Urok 29</string>
    <string name="button_1">bt1</string>
    <string name="button_2">Button_2</string>
    <string name="button_3">Button_3</string>
    <string name="button_9">Button_9</string>
    <string name="button_4">Button_4</string>
    <string name="button_5">Button_5</string>
    <string name="button_6">Button_6</string>
    <string name="button_7">Button_7</string>
    <string name="button_8">Button_8</string>
    <string name="button_11">Button_11</string>
    <string name="button_12">Button_12</string>


</resources>