<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
   <RelativeLayout tools:ignore="MissingConstraints"
       android:layout_height="match_parent"
       android:layout_width="match_parent">

       <Button
           android:id="@+id/btn_1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/button_1"
           android:backgroundTint="@color/green"
           android:layout_alignParentStart="true"

           />

       <Button
           android:id="@+id/btn_2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/button_2"
           android:backgroundTint="@color/grey"
           android:layout_alignParentEnd="true"

           />

       <Button
           android:id="@+id/btn_3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/button_3"
           android:backgroundTint="@color/violet"
           android:layout_alignParentBottom="true"
           android:layout_alignParentStart="true"

           />

       <Button
           android:id="@+id/btn_4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/button_4"
           android:backgroundTint="@color/blue"
           android:layout_alignParentBottom="true"
           android:layout_alignParentEnd="true"
            />

       <Button
           android:id="@+id/btn_5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/button_5"
           android:backgroundTint="@color/brown"
           android:layout_centerInParent="true"
            />

       <Button
           android:id="@+id/btn_6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/button_6"
           android:backgroundTint="@color/orange"
           android:layout_centerVertical="true"
           />

       <Button
           android:id="@+id/btn_8"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:backgroundTint="@color/yellow"
           android:text="@string/button_8"
           android:layout_centerHorizontal="true"/>

       <Button
           android:id="@+id/btn_7"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:layout_centerVertical="true"
           android:backgroundTint="@color/red"
           android:text="@string/button_7" />

       <Button
           android:id="@+id/btn_9"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:backgroundTint="@color/pink"
           android:text="@string/button_9"
           android:layout_centerHorizontal="true"
           android:layout_alignParentBottom="true"
            />

       <Button
           android:id="@+id/btn_10"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:backgroundTint="@color/black"
           android:text="Button_10"
           android:layout_below="@id/btn_5"
           android:layout_toStartOf="@id/btn_5"
           />
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/btn_11"
           android:backgroundTint="@color/black"
           android:text="@string/button_11"
           android:layout_toEndOf="@id/btn_5"
           android:layout_below="@id/btn_7" />

       <Button
           android:id="@+id/btn_12"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_above="@id/btn_5"
           android:layout_margin="5pt"
           android:layout_alignLeft="@id/btn_5"
           android:backgroundTint="@color/pink"
           android:text="@string/button_12" />


   </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>